@@ -13,6 +13,7 @@ fixed bugs:
 - fixed bug in cons_xor.c calling method on null pointer row
 - fixed bug in cons_abspower.c handling infinity values in propagation
 - fixed bug in parsing bounds from CIP-files
+- fixed problem that diving did not save status for infeasible LPs
 
 features:
 - can now output the solutions in the solution pool in the interactive shell
